<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <TextView
        android:id="@+id/markYourDateAndHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/select_a_date"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="41sp"
        android:textStyle="bold"
        android:theme="@style/TextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:firstDayOfWeek="2">

        </CalendarView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/saveDate"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="5dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text=" "
            android:textAllCaps="false"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/saveHour"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text=" "
            android:textAllCaps="false"
            android:textSize="38sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/eight"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="27sp"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/ten"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:gravity="center"
            android:text="@string/ten"
            android:textSize="27sp"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/twelve"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/twelve"
            android:textSize="27sp"
            android:theme="@style/ButtonStyle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/two"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="27sp"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/four"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="27sp"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/six"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/six"
            android:textSize="27sp"
            android:theme="@style/ButtonStyle" />

    </RelativeLayout>

    <Button
        android:id="@+id/bookNow"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/book_now"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>
