<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/eyelashStylingServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/eyelash_styling_services"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:theme="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/naturalEffectBtn"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/natural_effect"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@id/kimEffectBtn"
        app:layout_constraintEnd_toStartOf="@id/lightVolumeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eyelashStylingServices" />

    <Button
        android:id="@+id/lightVolumeBtn"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/light_volume"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/eyelashStylingServices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/naturalEffectBtn"
        app:layout_constraintBottom_toTopOf="@id/megaVolumeBtn" />

    <Button
        android:id="@+id/kimEffectBtn"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/kim_effect"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintEnd_toStartOf="@id/megaVolumeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/naturalEffectBtn"
        app:layout_constraintBottom_toTopOf="@id/serviceImg" />

    <Button
        android:id="@+id/megaVolumeBtn"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/mega_volume"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/kimEffectBtn"
        app:layout_constraintTop_toBottomOf="@id/lightVolumeBtn"
        app:layout_constraintBottom_toTopOf="@id/serviceImg" />

    <ImageView
        android:id="@+id/serviceImg"
        android:layout_width="360dp"
        android:layout_height="255dp"
        android:background="@drawable/lash_service"
        app:layout_constraintBottom_toTopOf="@id/contactBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kimEffectBtn" />

    <Button
        android:id="@+id/galleryBtn"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:clickable="true"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_700"
        android:theme="@style/ButtonStyle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/contactBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serviceImg"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/contact"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:clickable="true"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_700"
        android:theme="@style/ButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/galleryBtn"
        app:layout_constraintTop_toBottomOf="@id/serviceImg"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>