<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/icHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_hours"
        app:layout_constraintBottom_toTopOf="@id/daysAndHours"
        app:layout_constraintEnd_toStartOf="@id/openingHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/openingHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/opening_hours"
        android:textColor="@color/purple_200"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/daysAndHours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daysAndHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/days_and_hours"
        android:textColor="@color/black"
        android:textSize="43dp"
        app:layout_constraintBottom_toTopOf="@id/phoneNumberTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openingHours" />

    <ImageButton
        android:id="@+id/icPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_phone"
        app:layout_constraintBottom_toTopOf="@id/numberNumber"
        app:layout_constraintEnd_toStartOf="@id/phoneNumberTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/phone_number"
        android:textAllCaps="false"
        android:textColor="@color/purple_200"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/numberNumber"
        app:layout_constraintStart_toEndOf="@id/icPhone"
        app:layout_constraintTop_toBottomOf="@id/daysAndHours" />

    <TextView
        android:id="@+id/numberNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/number_number"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/emailTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icPhone" />

    <ImageButton
        android:id="@+id/icEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_email"
        app:layout_constraintBottom_toTopOf="@id/emailEmail"
        app:layout_constraintEnd_toStartOf="@id/emailTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/email_"
        android:textAllCaps="false"
        android:textColor="@color/purple_200"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/emailEmail"
        app:layout_constraintStart_toEndOf="@id/icEmail"
        app:layout_constraintTop_toBottomOf="@id/numberNumber" />

    <TextView
        android:id="@+id/emailEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/email_email"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icEmail" />

    <Button
        android:id="@+id/goBackContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/go_back"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>